--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,71 @@
 body {
-  background-color: black;
+  background-color: rgba(0, 255, 242, 0.377);
   margin: 0;
   padding: 0;
   height: 100vh;
   display: grid;
-  grid-template-rows: 200px 1fr;
+  grid-template-rows: 150px 1fr;
+}
+.logo {
+  color: white;
+  font-size: 3rem;
+}
+
+.header {
+  display: grid;
+  grid-template-columns: 400px 1fr;
+  justify-items: center;
+  align-items: center;
 }
 
 .display {
-  background-color: rgba(165, 42, 42, 0.589);
+  background-color: white;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 300px));
   gap: 20px;
+  padding: 20px;
 }
 
 .card {
   color: white;
-  background-color: rgb(151, 151, 151);
+  background-color: rgb(180, 180, 180);
   height: 250px;
+  border-radius: 20px;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: 1fr;
+  justify-items: center;
+  align-items: center;
+  padding: 10px;
+  box-shadow: 10px 5px 5px rgb(212, 212, 212);
+}
+
+button {
+  height: 50px;
+  width: 150px;
+  background-color: rgb(180, 180, 180);
+  border: none;
+  border-radius: 20px;
+  color: white;
+  cursor: pointer;
+}
+
+button:active {
+  background-color: rgb(141, 141, 141);
+}
+
+dialog {
+  width: 400px;
+  height: 400px;
+  border-radius: 20px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 20px;
+}
+input {
+  height: 30px;
 }
