--- a/styles.css
+++ b/styles.css
@@ -61,11 +61,8 @@ dialog {
 }
 
 form {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
   margin-top: 20px;
 }
-input {
+input[tyep="text"] {
   height: 30px;
 }
