--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgba(0, 255, 242, 0.377);
+  background-color: rgba(0, 168, 160, 0.377);
   margin: 0;
   padding: 0;
   height: 100vh;
@@ -19,7 +19,7 @@ body {
 }
 
 .display {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.623);
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 300px));
   gap: 20px;
@@ -30,7 +30,7 @@ body {
   color: white;
   font-size: 2rem;
   background-color: rgb(180, 180, 180);
-  height: 250px;
+  height: 300px;
   border-radius: 20px;
   display: grid;
   grid-template-rows: repeat(4, 1fr);
@@ -81,4 +81,12 @@ input[type="checkbox"] {
 
 input[tyep="text"] {
   height: 30px;
+}
+
+.deleteBtn {
+  background-color: red;
+}
+
+.deleteBtn:active {
+  background-color: rgb(173, 1, 1);
 }
