--- a/styles.css
+++ b/styles.css
@@ -90,3 +90,11 @@ input[tyep="text"] {
 .deleteBtn:active {
   background-color: rgb(173, 1, 1);
 }
+
+.readBtn {
+  background-color: rgb(0, 207, 0);
+}
+
+.readBtn:active {
+  background-color: rgba(0, 207, 0, 0.5);
+}
