--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ button {
   border-radius: 20px;
   color: white;
   cursor: pointer;
+  font-size: 1rem;
 }
 
 button:active {
@@ -84,11 +85,11 @@ input[tyep="text"] {
 }
 
 .deleteBtn {
-  background-color: red;
+  background-color: rgb(185, 0, 0);
 }
 
 .deleteBtn:active {
-  background-color: rgb(173, 1, 1);
+  background-color: rgb(100, 0, 0);
 }
 
 .readBtn {
@@ -96,5 +97,5 @@ input[tyep="text"] {
 }
 
 .readBtn:active {
-  background-color: rgba(0, 207, 0, 0.5);
+  background-color: rgba(0, 139, 0, 0.5);
 }
